--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -84,6 +84,10 @@ $profile-form-field-mt: 30px;
             margin-bottom: 20px;
             display: inline-flex;
             flex-wrap: wrap;
+            .user-info {
+              margin-bottom: 10px;
+              margin-right: 20px;
+            }
           }
 
           .skills-container {
@@ -267,12 +271,10 @@ $profile-form-field-mt: 30px;
   .user-info {
     display: grid;
     grid-template:
-      " image info "auto / 60px 200px;
+      " image info "auto / 60px minmax(min-content, max-content);
     ;
     grid-column-gap: 10px;
     background-color: transparent;
-    margin-right: 10px;
-    margin-bottom: 10px;
 
     .image {
       grid-area: image;
@@ -661,8 +663,37 @@ $profile-form-field-mt: 30px;
           & .row {
             .header-container {
               @include flex(column, center, flex-start);
+              margin-bottom: 10px;
+            }
+            .sub-container,
+            .skills-container {
+              margin-bottom: 10px;
             }
           }
+        }
+      }
+    }
+
+    .user-info {  
+      .info {
+        h2.name {
+          font-size: 20px;
+          line-height: 28px;
+        }
+  
+        h3.title {
+          font-size: 14px;
+          line-height: 18px;
+        }
+  
+        h4.secondary-title {
+          font-size: 12px;
+          line-height: 15px;
+        }
+  
+        h5.secondary-title {
+          font-size: 12px;
+          line-height: 15px;
         }
       }
     }
