--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.html
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.html
@@ -7,7 +7,7 @@
         <div class="profile-form" [formGroup]="skillsForm">
 
           <div class="profile-form__field search">
-            <h3>Skills <span *ngIf="userSkillsList.length > 0" class="count">{{userSkillsList.length}}</span></h3>
+            <h3>Skills </h3>
             <mat-form-field appearance="standard" class="search">
               <mat-icon matSuffix>search</mat-icon>
               <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
