--- a/client/src/app/pages/company/create-company/create-company.component.html
+++ b/client/src/app/pages/company/create-company/create-company.component.html
@@ -1,140 +1,145 @@
-<div *ngIf="selectedPageIndex>0" class="profile-completion">
-    <div class="container">
-        <ng-container *ngFor="let page_title of page_titles; let i = index">
-            <action-button *ngIf="page_title" class="link-btn desktop" type="text" title="{{page_title}}"
-                (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
-        </ng-container>
-        <mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
-        <span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
-        <span class="progress-label"
-            [class.done]="selectedPageIndex===9">{{progressWidth[selectedPageIndex].label}}%</span>
-        <div class="progress-bar" [style.width.%]="progressWidth[selectedPageIndex].width"></div>
-        <div class="container__header tablet" [class.open]="isTabMenuOpen">
-            <ng-container *ngFor="let page_title of page_titles; let i = index">
-                <action-button *ngIf="page_title" class="link-btn" type="text" title="{{page_title}}"
-                    (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i">
-                </action-button>
-            </ng-container>
-        </div>
-    </div>
+<div class="profile-completion">
+	<div class="container">
+		<ng-container *ngFor="let page_title of page_titles; let i = index">
+			<action-button *ngIf="page_title" class="link-btn desktop" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
+		</ng-container>
+		<mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
+		<span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
+		<span class="progress-label"
+			[class.done]="selectedPageIndex===9">{{progressWidth[selectedPageIndex].label}}%</span>
+		<div class="progress-bar" [style.width.%]="progressWidth[selectedPageIndex].width"></div>
+		<div class="container__header tablet" [class.open]="isTabMenuOpen">
+			<ng-container *ngFor="let page_title of page_titles; let i = index">
+				<action-button *ngIf="page_title" class="link-btn" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i">
+				</action-button>
+			</ng-container>
+		</div>
+	</div>
 </div>
 
 
 <!-- Create_Profile_Basic start -->
 
-<div *ngIf="selectedPageIndex===1" class="container {{profileCreationPages[1]}}">
-    <div class="container__full">
-        <div class="profile-form" [formGroup]="nameOverviewForm">
-            <h3 class="profile-form__title">
-                Company name & Overview
-            </h3>
+<div *ngIf="selectedPageIndex===0" class="container {{profileCreationPages[0]}}">
+	<div class="container__full">
+		<div class="profile-form" [formGroup]="nameOverviewForm">
+			<h3 class="profile-form__title">
+				Company name & Overview
+			</h3>
 
-            <div class="profile-form__image">
-                <input style="display: none" type="file" (change)="onPhotoFileSelected($event)" #fileInput>
+			<div class="profile-form__image">
+				<input style="display: none" type="file" (change)="onPhotoFileSelected($event)" #fileInput>
 
-                <img alt="Profile Image" src="{{basicInfoForm.get('photo').value || 'assets/icons/profile-image.svg'}}"
-                    (click)="fileInput.click()">
-            </div>
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>Company Name</mat-label>
-                    <input matInput placeholder="Company Name" type="text" formControlName="nameCompany">
-                </mat-form-field>
-            </div>
-            <div class="profile-form__field textarea">
-                <mat-form-field>
-                    <textarea matInput placeholder="Briefly introduce the company" rows="15"
-                        formControlName="aboutCompany"></textarea>
-                </mat-form-field>
-            </div>
+				<img alt="Profile Image" src="{{nameOverviewForm.value.company_logo || 'assets/icons/profile-image.svg'}}" (click)="fileInput.click()">
+			</div>
 
-        </div>
-    </div>
-    <div class="container__full">
-        <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"
-            [disabled]="!checkBasicInfoFormSkip() && !(basicInfoForm.valid && onCheckCityValidation() && onCheckStateValidation())">
-        </action-button>
-    </div>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>Company Name</mat-label>
+					<input matInput placeholder="Company Name" type="text" formControlName="company_name">
+				</mat-form-field>
+			</div>
+			<div class="profile-form__field textarea">
+				<mat-form-field>
+					<textarea matInput placeholder="Briefly introduce the company" rows="15" formControlName="company_desc"></textarea>
+				</mat-form-field>
+			</div>
+		</div>
+	</div>
+
+	<div class="container__full">
+		<action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!checkBasicInfoFormSkip() && !(basicInfoForm.valid && onCheckCityValidation() && onCheckStateValidation())">
+		</action-button>
+	</div>
 </div>
 
 <!-- Create_Profile_Basic end -->
 
 <!-- Create_Profile_About Company Information start -->
 
-<div *ngIf="selectedPageIndex===2" class="container {{profileCreationPages[2]}}">
-    <div class="container__full">
-        <div class="profile-form" [formGroup]="companyBasicInfoForm">
-            <h3 class="profile-form__title">
-                Company Information
-            </h3>
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>Company Size</mat-label>
-                    <mat-select formControlName="companySize">
-                        <mat-option *ngFor="let companySizeType of companySizeTypes" value="{{companySizeType}}">
-                            {{companySizeType}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>Founding Year</mat-label>
-                    <input matInput placeholder="YYYY" type="text" formControlName="companyFounded_date" pattern="\d{4}">
-                    <input class="hide" [matDatepicker]="companyFounded_date" [max]="maxDate">
-                    <mat-datepicker-toggle matSuffix [for]="companyFounded_date"></mat-datepicker-toggle>
-                    <mat-datepicker 
-                        touchUi 
-                        #companyFounded_date 
-                        startView="multi-year"  
-                        (yearSelected)="onFoundedYearSelect($event, true, companyFounded_date)"
-                    >
-                    </mat-datepicker>
-                </mat-form-field>
-            </div>
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>Country</mat-label>
-                    <mat-select formControlName="companyCountry">
-                    <mat-option value="{{null}}">{{null}}</mat-option>
-                    <mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-
-            <!-- // TODO: Fix wrong state marked as correct -->
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>State</mat-label>
-                    <input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState" formControlName="companyState">
-                    <mat-icon matSuffix *ngIf="companyBasicInfoForm.get('companyState').value && helperService.checkSpacesString(companyBasicInfoForm.get('companyState').value) && companyBasicInfoForm.get('companyState').valid && onCheckStateValidation()">done</mat-icon>
-                    <mat-icon matSuffix class="error-field" *ngIf="companyBasicInfoForm.get('companyState').value && helperService.checkSpacesString(companyBasicInfoForm.get('companyState').value) && !onCheckStateValidation() && companyBasicInfoForm.get('companyState').touched">close</mat-icon>
-                    <mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
-                    <mat-option *ngFor="let state of autocomplete_states" [value]="state.state" (onSelectionChange)="onSelectState(state)">
-                        <span>{{state.state}}</span>
-                    </mat-option>
-                    </mat-autocomplete>
-                </mat-form-field>
-            </div>
-            <div class="profile-form__field">
-                <mat-form-field class="bg-transparent" appearance="fill">
-                    <mat-label>Website</mat-label>
-                    <input matInput placeholder="Title" type="text" formControlName="companyWebsite">
-                </mat-form-field>
-            </div>
-
-
-        </div>
-    </div>
-    <div class="container__full">
-        <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
-    </div>
+<div *ngIf="selectedPageIndex===1" class="container {{profileCreationPages[1]}}">
+	<div class="container__full">
+		<div class="profile-form" [formGroup]="companyBasicInfoForm">
+			<h3 class="profile-form__title">
+				Company Information
+			</h3>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>Company Size</mat-label>
+					<mat-select formControlName="company_size">
+						<mat-option *ngFor="let companySizeType of companySizeTypes" value="{{companySizeType}}">{{companySizeType}}</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>Founding Year</mat-label>
+					<input matInput placeholder="YYYY" type="text" formControlName="founding_year" pattern="\d{4}">
+					<input class="hide" [matDatepicker]="companyFounded_date" [max]="maxDate">
+					<mat-datepicker-toggle matSuffix [for]="companyFounded_date"></mat-datepicker-toggle>
+					<mat-datepicker 
+						touchUi 
+						#companyFounded_date 
+						startView="multi-year"  
+						(yearSelected)="onFoundedYearSelect($event, companyFounded_date)"
+					>
+					</mat-datepicker>
+				</mat-form-field>
+			</div>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>City</mat-label>
+					<input matInput placeholder="City" type="text" [matAutocomplete]="autocompleteCity" formControlName="hq_city">
+					<mat-icon matSuffix *ngIf="companyBasicInfoForm.get('hq_city').value && helperService.checkSpacesString(companyBasicInfoForm.get('hq_city').value) && companyBasicInfoForm.get('hq_city').valid && onCheckCityValidation()">done</mat-icon>
+					<mat-icon matSuffix class="error-field" *ngIf="companyBasicInfoForm.get('hq_city').value && helperService.checkSpacesString(companyBasicInfoForm.get('hq_city').value) && !onCheckCityValidation() && companyBasicInfoForm.get('hq_city').touched">close</mat-icon>
+					<mat-autocomplete #autocompleteCity="matAutocomplete" (closed)="onBlurCity()">
+						<mat-option *ngFor="let city of autocomplete_cities" [value]="helperService.cityNameFromAutoComplete(city.city)" (onSelectionChange)="onSelectCity(city)">
+							<span>{{city.city}}</span>
+						</mat-option>
+					</mat-autocomplete>
+				</mat-form-field>
+			</div>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>State</mat-label>
+					<input matInput placeholder="State" type="text" [matAutocomplete]="autocompleteState" formControlName="hq_state">
+					<mat-icon matSuffix *ngIf="companyBasicInfoForm.value.hq_state && helperService.checkSpacesString(companyBasicInfoForm.value.hq_state) && companyBasicInfoForm.get('hq_state').valid && onCheckStateValidation()">done</mat-icon>
+					<mat-icon matSuffix class="error-field" *ngIf="companyBasicInfoForm.get('hq_state').value && helperService.checkSpacesString(companyBasicInfoForm.get('hq_state').value) && !onCheckStateValidation() && companyBasicInfoForm.get('hq_state').touched">close</mat-icon>
+					<mat-autocomplete #autocompleteState="matAutocomplete" (closed)="onBlurState()">
+					<mat-option *ngFor="let state of autocomplete_states" [value]="state.state" (onSelectionChange)="onSelectState(state)">
+						<span>{{state.state}}</span>
+					</mat-option>
+					</mat-autocomplete>
+				</mat-form-field>
+			</div>
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>Country</mat-label>
+					<mat-select formControlName="hq_country">
+					<mat-option value="{{null}}">{{null}}</mat-option>
+					<mat-option *ngFor="let country of countries" value="{{country}}">{{country}}</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
+				
+			<div class="profile-form__field">
+				<mat-form-field class="bg-transparent" appearance="fill">
+					<mat-label>Website</mat-label>
+					<input matInput placeholder="Title" type="text" formControlName="website">
+				</mat-form-field>
+			</div>
+		</div>
+	</div>
+	<div class="container__full">
+		<action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+	</div>
 </div>
 
 <!-- Create_Profile_About end -->
 
 <!-- Create_Profile_Education start -->
 
-<div *ngIf="selectedPageIndex===3" class="container {{profileCreationPages[3]}}">
+<div *ngIf="selectedPageIndex===2" class="container {{profileCreationPages[2]}}">
     <div class="container__full">
         <div class="profile-form" [formGroup]="companyIndustryForm">
             <h3 class="profile-form__title">
