--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -510,7 +510,7 @@ action-button {
     position: relative;
     border-radius: 20px;
     margin: 0 40px;
-    template-dialog, skill-level-description-dialog,
+    template-dialog, skill-level-description-dialog,skill-level-description,
     profile-dialog, add-skill-popup,
     dialog-content {
       width: 100%;
