--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.html
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.html
@@ -1,5 +1,4 @@
 <mat-icon class="cancel" (click)="onClose()">cancel</mat-icon>
-<h3 class="title">SKILLS</h3>
 <ng-container>
   <mat-dialog-content>
     <div class="container">
@@ -7,7 +6,7 @@
         <div class="profile-form" [formGroup]="skillsForm">
 
           <div class="profile-form__field search">
-            <h3>Skills </h3>
+            <h3>Skills</h3> <img src="assets/icons/ic_question.svg" class="question" (click)="openSkilladdDialog(skillLevelDescription)">
             <mat-form-field appearance="standard" class="search">
               <mat-icon matSuffix>search</mat-icon>
               <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
