--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
@@ -17,12 +17,6 @@ $profile-form-padding-desktop: 60px;
     right: 10px;
     color: #318bd6;
   }
-
-  .title {
-    margin-top: $profile-form-field-mt;
-    text-align: center;
-  }
-
   & mat-dialog-content {
     .container {
       &__full {
@@ -54,6 +48,11 @@ $profile-form-padding-desktop: 60px;
             padding: 0px 0 0 18px;
             h3 {
               color: rgba(map-get($md-cfaccent, 500), 0.84);
+              display: inline-block;
+            }
+            .question {
+              vertical-align: text-bottom;
+              margin-left: 8px;
             }
             .count {
               font-size: 14px;
@@ -61,11 +60,13 @@ $profile-form-padding-desktop: 60px;
             }
             mat-form-field {
               margin-top: 10px;
+
               background-color: $third-bg-color;
               border-radius: 25px;
             }
             .skills {
               margin-top: 10px;
+              margin-bottom: 19px;
               @include flex(row, center, flex-start);
               & > * {
                 margin-top: 20px;
@@ -93,6 +94,66 @@ $profile-form-padding-desktop: 60px;
       margin: 0 auto;
     }
   }
-      
-    
+}
+@media only screen and (max-width: 480px) {
+  :host {
+    & mat-dialog-content {
+      .container {
+        padding: 0 0px;
+        &__full {
+          grid-column-start: 1;
+          grid-column-end: 12;
+        }
+        .profile-form {
+          &__field {
+            &.search {
+              border: none;
+              h3 {
+                color: rgba(map-get($md-cfaccent, 500), 0.84);
+                display: inline-block;
+              }
+              .question {
+                vertical-align: text-bottom;
+                margin-left: 5px;
+              }
+              .count {
+                font-size: 14px;
+                font-weight: 400;
+              }
+              mat-form-field {
+                margin-top: 10px;
+
+                background-color: $third-bg-color;
+                border-radius: 25px;
+              }
+              .skills {
+                margin-top: 10px;
+                margin-bottom: 19px;
+                @include flex(row, center, flex-start);
+                & > * {
+                  margin-top: 20px;
+                  margin-right: 15px;
+                }
+                mat-icon {
+                  color: map-get($md-cfaccent, 100);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  mat-dialog-actions {
+    margin-bottom: 0 !important;
+    .nextButton {
+      margin: 0 auto;
+      .btn-next {
+        button {
+          width: 97%;
+        }
+      }
+    }
+  }
 }
