--- a/client/src/app/pages/company/create-company/create-company.component.scss
+++ b/client/src/app/pages/company/create-company/create-company.component.scss
@@ -331,6 +331,241 @@ p {
       }
     }
   }
+  &.company-preview {
+    padding: 0;
+    width: 100%;
+    display: grid;
+    grid-template:
+    " hero hero " auto 
+    " lege lege " 0
+    " left main-nav " 0
+    " left main " auto
+    / 300px auto
+    ;
+    grid-column-gap: 40px;
+
+    legend {
+      grid-area: lege;
+      display: none;
+      .nav-title {
+        @include flex(row, center, flex-start);
+        h3 {
+          font-family: 'Poppins', sans-serif;
+          font-weight: 700;
+          font-size: 20px;
+          margin: 0;
+          line-height: 30px;
+          color: rgba(map-get($md-cfaccent, 500), .24);
+        }
+        mat-icon {
+          color: map-get($md-cfprimary, 500);
+          display: none;
+          margin-left: 10px;
+          font-size: 20px;
+          width: 20px;
+          height: 20px;
+        }
+      }
+      a {
+        font-size: 12px;
+        color: map-get($md-cfprimary, 500);
+        @include disable-select();
+        cursor: pointer;
+        &.disabled {
+          color: map-get($md-cfaccent, 100);
+        }
+      }
+    }
+    
+    .section-title {
+      text-transform: uppercase;
+    }
+
+    .header-section {
+      grid-area: hero;
+      background-color: $white;
+
+      .back-row {
+        // width: 100%;
+        height: 60px;
+        padding-left: 40px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid map-get($md-cfaccent, 50);
+      }
+    
+      button.back { // TODO: Make more like the designs
+        width: 80px;
+        height: 30px;
+        background-color: rgba(map-get($md-cfaccent, 500), 0.05);
+        border-color: rgba(map-get($md-cfaccent, 500), 0.05);
+        color: rgba(map-get($md-cfaccent, 500), 0.84);
+        padding: 3px 13px;
+        margin-right: 5px;
+        border-radius: 500px;
+        cursor: pointer;
+    
+        &:focus {
+          outline: 0;
+        }
+      }
+    
+      .company-row {
+        display: inline-flex;
+        padding: 20px 40px;
+        border-bottom: 1px solid map-get($md-cfaccent, 50);
+    
+        .company-logo {
+          width: 125px;
+          height: 125px;
+          margin-right: 15px;
+        }
+    
+        .company-undertitle {
+          display: inline-flex;
+          width: 100%;
+        }
+      }
+    
+      .tabs-row {
+        height: 60px;
+        width: fit-content;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        h3 {
+          cursor: pointer;
+          font-family: 'Poppins-Semibold', sans-serif;
+          font-size: 20px;
+          text-transform: uppercase;
+          color: rgba(map-get($md-cfaccent, 500), .34);
+          margin: 0 20px;
+    
+          &:hover {
+            color: map-get($md-cfprimary, 500);
+          }
+    
+          &.active {
+            color: map-get($md-cfprimary, 500);
+          }
+        }
+      }
+
+      .icon-title {
+        display: inline-grid;
+        grid-template: "image title" 28px "image info" 28px
+        / 56px auto;
+        grid-gap: 0 10px;
+        width: 240px;
+        margin: 5px 10px 5px 0;
+      
+        img {
+          grid-area: image;
+          width: 56px;
+        }
+      
+        label {
+          grid-area: title;
+          font-family: 'Poppins-Regular', sans-serif;
+          font-size: 14px;
+          line-height: 28px;
+          font-style: normal;
+          font-weight: 400;
+          color: rgba(map-get($md-cfaccent, 500), .44);
+        }
+      
+        p {
+          grid-area: info;
+          margin: 0;
+          font-family: 'Roboto', sans-serif;
+          font-size: 16px;
+          line-height: 28px;
+          font-style: normal;
+          font-weight: 500;
+        }
+      
+        a {
+          grid-area: info;
+          text-decoration: none;
+          color: #263f5d;
+        }
+      }
+      
+      small {
+        display: flex;
+        align-items: center;
+        margin: 10px 20px 10px 0; 
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: rgba(map-get($md-cfaccent, 500), .84);
+      
+        label {
+          color: rgba(map-get($md-cfaccent, 500), .34);
+          margin-right: 5px;
+        }
+      
+        img {
+          width: 10px;
+          margin-right: 5px;
+      
+          &.valid {
+            width: 15px;
+            margin: 0;
+          }
+        }
+      }
+      
+      .user-row {
+        width: 100%;
+        box-sizing: border-box;
+        display: inline-flex;
+        flex-wrap: wrap;
+        padding: 20px 40px;
+        border-bottom: 1px solid map-get($md-cfaccent, 50);
+      
+        .user-photo {
+          width: 125px;
+          height: 125px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+      
+        .user-detail {
+          display: inline-flex;
+          flex-direction: column;
+          flex: 1;
+          margin-left: 30px;
+      
+          h1 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 30px;
+            line-height: 34px;
+            font-weight: 600;
+            margin: 0;
+            margin-bottom: 5px;
+          }
+      
+          .user-info {
+            display: inline-flex;
+            flex-wrap: wrap;
+          }
+        }
+      
+        .user-status {
+          min-width: 260px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: flex-end;
+        }
+      }
+
+    }
+  }
 }
 
 .img-tag {
@@ -498,6 +733,75 @@ p {
         }
       }
     }
+    .company-preview {
+      grid-template:
+      " hero hero " auto 
+      " lege lege " 0
+      " left main-nav " auto
+      " left main " auto
+      / 0 auto
+      ;
+      grid-column-gap: 0;
+
+      legend {
+        position: fixed;
+        margin: 0;
+        height: 60px;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        background-color: $bg-color-1;
+        border-bottom: 1px solid map-get($md-cfaccent, 50);
+        padding:0 40px;
+        box-sizing: border-box;
+        @include flex(row, center, space-between);
+        z-index: 100;
+        .nav-title {
+          cursor: pointer;
+          h3 {
+            color: map-get($md-cfprimary, 500);
+          }
+          mat-icon {
+            display: block;
+          }
+        }
+      }
+      .header-section {
+        .user-row {
+          padding: 20px 20px;
+          flex-direction: column;
+          align-items: center;
+      
+          .user-photo {
+            width: 110px;
+            height: 110px;
+            margin-right: 0;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+      
+          .user-detail {
+            h1, h4 {
+              text-align: center;
+            }
+          }
+      
+          .user-status {
+            flex-direction: row;
+      
+            & > * {
+              margin: 5px;
+            }
+          }
+      
+          .edit-form {
+            margin-top: 30px;
+            justify-content: space-evenly;
+          }
+        }
+      }
+      
+    }
   }
   .img-tag {
     width: 330px;
@@ -585,6 +889,32 @@ p {
               }
             }
           }
+        }
+      }
+    }
+    .company-preview {
+      legend {
+        padding: 0 20px;
+      }
+      .header-section {
+        .user-row {
+          .user-detail {
+            .user-info {
+              flex-direction: column;
+            }
+          }
+      
+          .user-status {
+            flex-direction: column;
+            align-items: center;
+      
+            img {
+              margin-top: 15px;
+            }
+          }
+        }
+        small {
+          padding-right: 0;
         }
       }
     }
