company preview page - nav section

--- a/client/src/app/pages/company/create-company/create-company.component.html
+++ b/client/src/app/pages/company/create-company/create-company.component.html
@@ -345,7 +345,19 @@
 
 	</div>
 	<div class="nav-section">
-
+			<div class="nav-title">
+				<h3 class="section-title">About</h3>
+			</div>
+			
+			<nav>
+				<div class="navmenu-title active">
+					<h3>Table Of Content</h3>
+					<ol>
+						<li>About Company</li>
+						<li>Company Industry</li>
+					</ol>
+				</div>
+			</nav>
 	</div>
 </div>
 <!-- Company Preview end-->
