--- a/client/src/app/pages/company/create-company/create-company.component.scss
+++ b/client/src/app/pages/company/create-company/create-company.component.scss
@@ -22,8 +22,8 @@ $profile-form-field-mt: 30px;
 
 :host {
   @include flex(column, center, flex-start);
-  min-height: calc(100vh - 70px);
-  padding: 0 0 70px 0;
+  min-height: 100vh;
+  padding: 0;
   box-sizing: border-box;
   color: rgba($primary-font-color, .84);
   background-color: $bg-color-1;
@@ -233,6 +233,7 @@ p {
         box-sizing: border-box;
         background-color: $white;
         @include flex(column, center, flex-start);
+        margin-bottom: 70px;
         &__title {
           margin: $profile-form-field-mt;
           text-transform: uppercase;
@@ -343,6 +344,7 @@ p {
     / 300px auto
     ;
     grid-column-gap: 40px;
+    grid-row-gap: 0;
 
     legend {
       grid-area: lege;
@@ -563,7 +565,95 @@ p {
           align-items: flex-end;
         }
       }
-
+    }
+    
+    .nav-section {
+      grid-area: left;
+      padding: 0 0 80px 40px;
+      box-sizing: border-box;
+      background-color: $bg-color-1;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 70px;
+      height: calc(100vh - 70px);
+      overflow-y: scroll;
+      .nav-title {
+        height: 60px;
+        @include flex(row, center, flex-start);
+        h3 {
+          font-family: 'Poppins', sans-serif;
+          font-weight: 700;
+          font-size: 20px;
+          margin: 0;
+          line-height: 30px;
+          color: rgba(map-get($md-cfaccent, 500), .24);
+          text-transform: uppercase;
+        }
+      }
+      nav {
+        .navmenu-title {
+          position: relative;
+          padding: 15px;
+          height: fit-content;
+          background: white;
+          border-radius: 5px;
+          margin-bottom: 2px;
+          h3 {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+          }
+          ol {
+            color: gray;
+            font-size: 0.8em;
+            display: none;
+            li {
+              margin-bottom: 10px;
+              &:hover {
+                color: map-get($md-cfprimary, 500);
+                cursor: pointer;
+              }
+            }
+          }
+          mat-icon {
+            position: absolute;
+            right: 15px;
+            top: 18px;
+            display: none;
+          }
+          &.active {
+            color: map-get($md-cfprimary, 500);
+            h3 {
+              color: map-get($md-cfprimary, 500);
+            }
+            ol {
+              display: block;
+            }
+            mat-icon {
+              display: block;
+            }
+            &:before {
+              content: "";
+              position: absolute;
+              left: 0;
+              top: 10px;
+              width: 4px;
+              height: 39px;
+              border-top-right-radius: 4px;
+              border-bottom-right-radius: 4px;
+              background-color: map-get($md-cfprimary, 500);
+            }
+          }
+        }
+        .btn-section {
+          padding: 40px 0;
+          text-align: center;
+        }
+        
+      }
+      &::-webkit-scrollbar {
+        width: 0;
+        background-color: transparent;
+      }
     }
   }
 }
@@ -620,7 +710,6 @@ p {
 
 @media only screen and (max-width: $tablet-breakpoint) {
   :host {
-    padding-bottom: 50px;
     .profile-completion {
       position: relative;
       .container {
@@ -711,6 +800,7 @@ p {
           width: 85%;
           max-width: $profile-form-max-width-tablet;
           padding: $profile-form-padding-tablet;
+          margin-bottom: 50px;
           &__image {
             width: 30%;
             max-width: 110px;
@@ -733,7 +823,7 @@ p {
         }
       }
     }
-    .company-preview {
+    &.company-preview {
       grid-template:
       " hero hero " auto 
       " lege lege " 0
@@ -788,7 +878,7 @@ p {
       
           .user-status {
             flex-direction: row;
-      
+            justify-content: center;
             & > * {
               margin: 5px;
             }
@@ -809,9 +899,6 @@ p {
 }
 
 @media only screen and (max-width: $mobile-breakpoint) {
-  :host {
-    padding-bottom: 35px;
-  }
   h1 {
     font-size: 35px;
     line-height: 1.2;
@@ -870,6 +957,7 @@ p {
           width: 100%;
           max-width: $profile-form-max-width-mobile;
           padding: $profile-form-padding-mobile;
+          margin-bottom: 35px;
           &__image {
             width: 50%;
             max-width: 95px;
@@ -892,11 +980,17 @@ p {
         }
       }
     }
-    .company-preview {
+    &.company-preview {
       legend {
         padding: 0 20px;
       }
       .header-section {
+        .tabs-row {
+          h3 {
+            font-size: 15px;
+            margin: 0 10px;
+          }
+        }
         .user-row {
           .user-detail {
             .user-info {
